// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      My First Component
    </h4>
  </div>
  <div
    className="modal-body"
  >
    <h1
      className="blue"
    >
      Hello, world!
    </h1>
    <span>
      0
    </span>
    <button
      className="counter"
      onClick={[Function]}
      type="button"
    />
  </div>
  <div
    className="modal-footer"
  >
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`renders counter 1`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      My First Component
    </h4>
  </div>
  <div
    className="modal-body"
  >
    <h1
      className="blue"
    >
      Hello, world!
    </h1>
    <span>
      10
    </span>
    <button
      className="counter"
      onClick={[Function]}
      type="button"
    />
  </div>
  <div
    className="modal-footer"
  >
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`renders hide small header 1`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      My First Component
    </h4>
  </div>
  <div
    className="modal-body"
  >
    <h1
      className="blue"
    >
      Hello, world!
    </h1>
    <span>
      0
    </span>
    <button
      className="counter"
      onClick={[Function]}
      type="button"
    />
  </div>
  <div
    className="modal-footer"
  >
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`renders small header 1`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      My First Component
    </h4>
  </div>
  <div
    className="modal-body"
  >
    <h1
      className="blue"
    >
      Hello, world!
    </h1>
    <h2>
      Hello, minions!
    </h2>
    <span>
      0
    </span>
    <button
      className="counter"
      onClick={[Function]}
      type="button"
    />
  </div>
  <div
    className="modal-footer"
  >
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`should increment counter 1`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      My First Component
    </h4>
  </div>
  <div
    className="modal-body"
  >
    <h1
      className="blue"
    >
      Hello, world!
    </h1>
    <span>
      1
    </span>
    <button
      className="counter"
      onClick={[Function]}
      type="button"
    />
  </div>
  <div
    className="modal-footer"
  >
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;
